tests/compile_errors/023-empty-import.buzz
| Import path can't be empty
import "";

test "empty import" {}